--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tailwindcss/vite": "^4.1.16",
     "@tiptap/core": "^2.1.13",
     "@tiptap/extension-drag-handle": "^2.27.1",
+    "@tiptap/extension-image": "^2.27.1",
     "@tiptap/extension-placeholder": "^2.1.13",
     "@tiptap/extension-task-item": "^2.1.13",
     "@tiptap/extension-task-list": "^2.1.13",
