--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16",
     "tippy.js": "^6.3.7",
+    "tw-animate-css": "^1.4.0",
     "zod": "^4.1.12"
   }
 }
